# public

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CNAME  README.md  VERSION  api-schema.yml  versions.json
docs/: README.md  mkdocs.yml  pyproject.toml
docs/docs/: .gitignore  index.md
docs/docs/api/clients/: index.md
docs/docs/api/clients/python/avis_client/: ApiKeysApi.md  AzureMLInferenceRequest.md  BinaryClassEnum.md  BinaryClassInspectionResult.md  BinaryClassInspectionResultRequest.md  BinaryClassInspectionResultTyped.md  BinaryClassInspectionResultTypedRequest.md  BlankEnum.md  Case.md  CaseApi.md  CaseRequest.md  CaseValidationStatus.md  ClassificationResult.md  ClassificationResultRequest.md  ClassificationResultStatus.md  CredentialsRequest.md  CustomUser.md  CustomUserRequest.md  EmailAddress.md  FormatEnum.md  Image.md  ImageApi.md  ImageQualityGate.md  ImageQualityGateRequest.md  ImageQualityGateResult.md  ImageRequest.md  ImagequalitygateApi.md  InspectionMetadata.md  InspectionMetadataRequest.md  InspectionMetadataSchema.md  InspectionMetadataSchemaRequest.md  InspectionObject.md  InspectionObjectRequest.md  InspectionObjectType.md  InspectionObjectTypeRequest.md  InspectionProcessBlueprint.md  InspectionProcessBlueprintRequest.md  InspectionResultPolymorphic.md  InspectionResultPolymorphicRequest.md  InspectionStatus.md  (+45 more)
docs/docs/api/clients/python/vue_avis_client/docs/: ApiKeysApi.md  AzureMLInferenceRequest.md  BinaryClassEnum.md  BinaryClassInspectionResult.md  BinaryClassInspectionResultRequest.md  Case.md  (+78 more)
docs/docs/api/rest/: index.md
docs/docs/api/rest/swagger/: index.md
docs/docs/examples/: index.md
docs/docs/examples/integrations/: luxonis-camera.md
examples/agent/: README.md  config.json  pyproject.toml
examples/agent/avis_agent/: instrumentation.py  main.py  utils.py
examples/agent/avis_agent/backend/: .gitignore  base.py
examples/agent/avis_agent/backend/impl/: avis.py
examples/agent/avis_agent/camera/: base.py
examples/agent/avis_agent/camera/impl/: mock.py  oak_d_poe.py
examples/agent/avis_agent/core/: base.py  commands.py  exceptions.py  responses.py
examples/agent/avis_agent/signal/: base.py
examples/agent/avis_agent/signal/impl/: cli.py  modbus_tcp.py
examples/agent/scripts/bash/: chaos.sh
examples/agent/scripts/python/: calibrate_camera.py  modbus_client.py  modbus_server.py  modbus_test_loop.py
examples/agent/systemd/: agent_modbus_chaos.service  avis_agent.service  modbus_server.service  modbus_test_loop.service
examples/agent/tests/: conftest.py
examples/agent/tests/backend/: test_avis_backend.py
examples/agent/tests/core/: test_agent.py  test_config.py
examples/agent/tests/core/data/: test_config.env  test_config.json
examples/agent/tests/signal/: conftest.py  test_cli.py  test_modbus_tcp.py
examples/full-cycle/: README.md  pyproject.toml
examples/full-cycle/full_cycle/: main.py
examples/take-picture-luxonis-camera/: README.md  main.py  pyproject.toml
examples/take-picture-luxonis-camera/take_picture_luxonis_camera/: main.py
examples/use-avis-client/: README.md  main.py  pyproject.toml
examples/use-avis-client/use_avis_client/: main.py
(+719 files in other folders)
