[tool.poetry]
name = "full-cycle"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
take-picture-luxonis-camera = {path = "../take-picture-luxonis-camera", develop = true}
use-avis-client = {path = "../use-avis-client", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
